src/test/ui/issue-18566.nll.stderr
error[E0499]: cannot borrow `*s` as mutable more than once at a time
  --> $DIR/issue-18566.rs:33:19
   |
LL |     MyPtr(s).poke(s);
   |     --------------^-
   |     |     |       |
   |     |     |       second mutable borrow occurs here
   |     |     first mutable borrow occurs here
   |     borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0499`.
